# scryfall-downloader

./: CHANGELOG.md  README.md  Scryfall.cabal  cards.csv
src/: Main.hs
