cabal-version:       2.2

name:                Scryfall
version:             0.1.0.0
homepage:            https://github.com/amallor/scryfall-downloader
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alan Malloy
maintainer:          alan@malloys.org
copyright:           2026 Alan Malloy
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable Scryfall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , http-client-tls
                     , http-types
                     , bytestring
                     , case-insensitive
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/amalloy/scryfall-downloader
